examples/syntax_errors/missing_parentheses_in_call_to_print.py
print "Hello world!"   # Error on this line
print("Hello world!")  # Correct version
